[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/rescue1_eyeblast.gd" type="Script" id=1]
[ext_resource path="res://art/weapons/rescue1_eyeblast.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 128.103, 29.4496 )

[node name="rescue1_eyeblast" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( 3.89984, -2.14221 )
shape = SubResource( 1 )

[node name="lifetime" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = true

[connection signal="body_entered" from="." to="." method="_on_rescue1_eyeblast_body_entered"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]


